# DES

./: .gitignore  .gitmodules  README.md  ReadMe.md
exercise/: CMakeLists.txt  ReadMe.md  notes.md
exercise/include/: lib-timer.h  logging.h  network.h  settings.h  signal_pin.h  timesync.h  types.h
exercise/log/: debug_log.csv  timestamps_2.csv
exercise/src/: exercise_slave.c  exercise_slave.cpp  lib-cv.cpp  lib-timer.cpp  logging.cpp  master_testfunction.cpp  network.cpp  roundtrip_master.c  roundtrip_slave.c  signal_pin.cpp  slave_node_main.cpp  timesync.cpp
roundtrip/: CMakeLists.txt  README.md  Report-Roundtrip-Measuremnt_Rödlach-Vock.docx
roundtrip/include/: network.h  settings.h  types.h
roundtrip/log/: laptopChristian_to_pi3_cpu_stress_both_50000.csv  laptopChristian_to_pi3_no_load_50000.csv  laptopChristian_to_pi3_nw_stress_50000.csv  laptopChristian_to_pi4_cpu_stress_both_50000.csv  laptopChristian_to_pi4_no_load_50000.csv  laptopChristian_to_pi4_nw_stress_50000.csv  pi4_to_pi3_cpu_stress_both_50000.csv  pi4_to_pi3_no_load_50000.csv  pi4_to_pi3_nw_stress_50000.csv
roundtrip/log/photos/: laptopChristian_to_pi4.heic  pi4_to_pi3.heic
roundtrip/log/sum/: summary.txt
roundtrip/src/: CMakeCache.txt  Makefile  cmake_install.cmake  master  network.c  roundtrip_master.c  roundtrip_slave.c  slave
roundtrip/visualisation/: Data-norm-index.csv  visual.py  visualLog.py  visualisation notes.txt
slave_node/: CMakeLists.txt  ReadMe.md  notes.md
slave_node/include/: lib-timer.h  lib.h  logging.h  network.h  settings.h  timesync.h  types.h
slave_node/log/: exit_state  slave_node  timestamps_2.csv
slave_node/log/Messung1/: timestamps_2.csv
slave_node/log/Messung2/: timestamps_2.csv
slave_node/log/backup/: timestamps_2.csv.bak2
slave_node/src/: lib-timer.cpp  master_testfunction.cpp  network.cpp  slave_node_main.cpp
slave_node/systemd/: slave_node.service  slave_node_wrapper.sh
